perfect picture(photobrowser and content ablum)

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     <!--内容模块-->
     <div class="content" id="content">
         <!--文章模块-->
-        <ul class="content_articles" id="content_articles">
-        </ul>
+        <ul class="content_articles" id="content_articles"></ul>
         <!--相册模块-->
         <ul class="content_ablum" id="content_ablum">
             <li class="content_ablum_navi">
@@ -160,9 +159,13 @@
                     <a>
                         <img src="photos/2015/wa.jpg">
                     </a>
-                    <figcaption style="display:none">小家伙,还想咬我.</figcaption></figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2015/girl.jpg','赏花季。')">
+                    <figcaption style="display:none">小家伙,还想咬我.</figcaption></figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2015/girl.jpg','a beatiful girl.')">
                 <a>
                     <img src="photos/2015/girl.jpg">
+                </a>
+                <figcaption style="display:none">a beatiful girl.</figcaption></figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2015/shanghua.jpg','赏花季。')">
+                <a>
+                    <img src="photos/2015/shanghua.jpg">
                 </a>
                 <figcaption style="display:none">赏花季。</figcaption></figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2015/peixun.jpg','隔三差五的培训。')">
                 <a>
@@ -178,26 +181,32 @@
             <!--2014-->
             <li class="photo_li">
                 <p photo_li_date>2014</p>
-                <figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/2014_04_10_12_25_00.jpg','专注')">
+                <figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/shixi.jpg','灰常的累。')">
                     <a>
-                        <img src="photos/2014/2014_04_10_12_25_00.jpg">
+                        <img src="photos/2014/shixi.jpg">
                     </a>
-                    <figcaption style="display:none">专注</figcaption>
-                </figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/biyezhao.jpg','非常的幸运，四个人在同一个宿舍两年，还都是老表。')">
-                    <a>
-                        <img src="photos/2014/biyezhao.jpg">
-                    </a>
-                    <figcaption style="display:none">非常的幸运，四个人在同一个宿舍两年，还都是老表。</figcaption>
-                </figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/ktv.jpg','最后的狂欢，人生最后一次天真无也的狂欢')">
-                    <a>
-                        <img src="photos/2014/ktv.jpg">
-                    </a>
-                    <figcaption style="display:none">最后的狂欢，人生最后一次天真无也的狂欢</figcaption>
+                    <figcaption style="display:none">灰常的累。</figcaption>
                 </figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/shanghai.jpg','我在对你笑.')">
                     <a>
                         <img src="photos/2014/shanghai.jpg">
                     </a>
                     <figcaption style="display:none">我在对你笑.</figcaption>
+                </figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/ktv.jpg','最后的狂欢，人生最后一次天真无也的狂欢')">
+                    <a>
+                        <img src="photos/2014/ktv.jpg">
+                    </a>
+                    <figcaption style="display:none">最后的狂欢，人生最后一次天真无也的狂欢</figcaption>
+                </figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/biyezhao.jpg','非常的幸运，四个人在同一个宿舍两年，还都是老表。')">
+                <a>
+                    <img src="photos/2014/biyezhao.jpg">
+                </a>
+                <figcaption style="display:none">非常的幸运，四个人在同一个宿舍两年，还都是老表。</figcaption>
+            </figure><!--|--><figure class="photo_li_figure" onclick="pb_showFigure('photos/2014/2014_04_10_12_25_00.jpg','专注')">
+                <a>
+                    <img src="photos/2014/2014_04_10_12_25_00.jpg">
+                </a>
+                <figcaption style="display:none">专注</figcaption>
+            </figure>
                 </figure>
             </li>
             <!--2012-->
@@ -234,7 +243,8 @@
             <!--版权-->
             <div class="foot_copyright"></div>
         </div>
-    </div>
+    </div><!--内容模块结束-->
+
     </div> <!--container结束-->
 
     <!--宽度<=790px左侧的蒙版-->
