insert code verify Youyan

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="format-detection" content="telephone=no" />
         <!--编码-->
         <meta charset="UTF-8">
+        <meta name="uyan_auth" content="e3ae5de3f8" />
             <title>Sinalma HomePage</title>
         <link rel="stylesheet" href="css/index.css">
         <!-- 引入自定义组件组件-->
